--- a/myfirstgit.html
+++ b/myfirstgit.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muhammad Atif github pages</title>
+    <title>My First Git</title>
 </head>
 <body>
 
-    <h1>Muhammad Atif Ramlan</h1>
-    <p>welcome to my github page.</p>
+    <h1>My first Git</h1>
+    <p>Welcome to my first git.</p>
     
 </body>
 </html>
